[10.7] Showing menubar covers firefox window in fullscreen mode (chrome should slide with the menu bar)
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox89 | --- | verified |
People
(Reporter: beingalink, Assigned: bugzilla, Mentored)
References
(Depends on 2 open bugs, Blocks 1 open bug, Regressed 1 open bug, )
Details
(Keywords: parity-chrome, parity-safari, Whiteboard: [tpi:+][mac:fullscreen][mac:mr1])
Attachments
(4 files, 3 obsolete files)
Comment 1•13 years ago
|
||
Reporter | ||
Comment 2•13 years ago
|
||
Comment 3•13 years ago
|
||
Comment 4•13 years ago
|
||
Updated•13 years ago
|
Comment 6•13 years ago
|
||
Comment 7•13 years ago
|
||
Comment 8•13 years ago
|
||
Comment 10•12 years ago
|
||
Comment 11•12 years ago
|
||
Comment 12•12 years ago
|
||
Comment 13•12 years ago
|
||
Comment 14•12 years ago
|
||
Comment 15•12 years ago
|
||
Comment 16•12 years ago
|
||
Comment 17•12 years ago
|
||
Comment 18•12 years ago
|
||
Comment 19•12 years ago
|
||
Comment 20•12 years ago
|
||
Comment 21•12 years ago
|
||
Comment 22•12 years ago
|
||
Comment 23•12 years ago
|
||
Comment 24•12 years ago
|
||
Comment 25•12 years ago
|
||
Comment 26•12 years ago
|
||
Comment 27•12 years ago
|
||
Comment 28•12 years ago
|
||
Comment 29•12 years ago
|
||
Comment 30•12 years ago
|
||
Comment 31•12 years ago
|
||
Comment 32•12 years ago
|
||
Comment 33•12 years ago
|
||
Comment 34•12 years ago
|
||
Comment 35•12 years ago
|
||
Comment 36•12 years ago
|
||
Comment 39•9 years ago
|
||
Comment 40•9 years ago
|
||
Comment 41•9 years ago
|
||
Comment 42•9 years ago
|
||
Comment 43•9 years ago
|
||
Comment 44•9 years ago
|
||
Updated•9 years ago
|
Comment 45•9 years ago
|
||
Comment 46•9 years ago
|
||
Updated•7 years ago
|
![]() |
||
Comment 50•7 years ago
|
||
Comment hidden (advocacy) |
Comment 57•5 years ago
|
||
Vivaldi has done what Safari does.
Comment 58•5 years ago
|
||
Comment 60•5 years ago
|
||
As a temporary workaround, I tried making an extension that would use the content's fullscreen API to put the root element in fullscreen, after I observed that putting a Youtube video in fullscreen correctly hides all the bars (albeit you can't see them anymore until you quit the fullscreen mode).
Unfortunately, that idea is currently blocked on bug 1638659.
As a temporary workaround for the temporary workaround, I ended up doing a bookmarklet:
javascript:div=document.createElement('div');div.style="position:fixed;z-index:100000;top:10px;left:10px;background:red;height:10px;width:10px";div.onclick=()=>{document.documentElement.requestFullscreen();div.remove()};document.body.append(div);
This will add a red square in the top left corner of the page, which will make the root element go fullscreen when clicked on.
Comment 62•4 years ago
|
||
Even worse, now in BigSur the macos menu bar gets stuck down.
Steps to reproduce:
- fullscreen a firefox window with only one tab
- ctrl click top of firefox menubar not in the tab (to the right of the last tab)
- toggle "Hide Toolbars" (on or off)
- move mouse to top of screen to have the apple menu bar scroll down
now it should be stuck down, and will not roll up. To get it to roll up, do one of the following:
- switch to a non-fullscreen normal desktop, and back to firefox (should always work)
- CMD-H or Firefox->Hide firefox (doesn't always work)
If you switch to a full-screen app and back, the menubar will stay rolled down.
it seems to be related to the browser.fullscreen.autohide option.
"Open all in tabs" will also trigger this behavior if you mouse to the top of the screen and the menubar comes down while tabs are still loading.
Comment 65•4 years ago
|
||
This also reported as Bug 1677299 - which was closed today because this thread predates it. By several years, by the looks of it.
Current status suggests that -
- when in Full Screen, you can open and left-click tabs without issue. The (blank white) Firefox tab (with the 'traffic lights') and the Menu tab will appear if cursor taken to top of screen, and retract when cursor pulled away. As it should be.
The problem appears (at least here) -
- if you right-click any tab and then later use cursor at top of screen to access Firefox and Menu bars. These bars slide into place and then freeze - partially blocking the Firefox toolbar. They will not retract when cursor moved away.
The only sure way to regain control of Firefox is as noted above - to use Menu bar > View > Exit Full Screen, and allow it to return to default size.
Currently on Firefox 84.0.1 with Big Sur 11.1. No issue with this prior to installing Firefox 82, several days after the install of Big Sur 11.0.1
Comment 66•4 years ago
|
||
ADDENDUM to above:
Neither Safari nor Microsoft Edge for Mac experiencing this freezing issue with Firefox and Menu bar while in Full Screen .
In case of Edge, near identical Add-ons included as with Firefox.
Comment hidden (advocacy) |
Updated•4 years ago
|
Comment hidden (advocacy) |
Comment hidden (advocacy) |
Comment hidden (advocacy) |
Updated•4 years ago
|
Comment hidden (advocacy) |
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 72•4 years ago
|
||
Assignee | ||
Comment 73•4 years ago
|
||
Depends on D106846
Updated•4 years ago
|
Updated•4 years ago
|
Comment 74•4 years ago
|
||
Comment on attachment 9206211 [details]
Bug 738335 - Part 1 - Add a NSTitlebarAccessoryViewController to ToolbarWindow to track when the titlebar is shown in fullscreen. r?#mac-reviewers
Revision D106846 was moved to bug 1699506. Setting attachment 9206211 [details] to obsolete.
Comment 75•4 years ago
|
||
Comment on attachment 9206212 [details]
Bug 738335 - Part 2 - Add CSS rules to shift the toolbar over the content when the macOS menubar is shown. r?#mac-reviewers,#desktop-theme-reviewers
Revision D106847 was moved to bug 1699506. Setting attachment 9206212 [details] to obsolete.
Comment 76•4 years ago
|
||
Now on MacOS 11.2.3, running Firefox 87.0 - issue still there.
Apple menubar in full-screen continues to freeze-up over Firefox menubar if beckoned, though consistent replication of the issue seems to depend on nothing in particular now.
View > Exit Full Screen remains escape out of frozen state - no access to Firefox menubar.
Like others above, disappointed that this is only browser (and maybe app) with this issue, and we're again at a new Firefox with no resolution. If I'm multi-tasking on my Mac requiring browser to be open and quickly accessible by a swipe, I end up using another browser.
Assignee | ||
Comment 77•4 years ago
|
||
This feature will be enabled in the next Nightly for macOS <11 (bug 1701107). It is disabled on macOS 11 due to bug 1700211. macOS 11 users can enable the pref full-screen-api.macos.shiftToolbar
if they want to try this behaviour out early.
Comment 78•4 years ago
|
||
Harry -
re: about: config pref setting noted above for MacOS 11 - enabled - no change. Apple menubar eventually freezes if beckoned.
BTW, I was not aware of issue as per bug 1700211.
Assignee | ||
Comment 79•4 years ago
|
||
Are you on a recent Nightly? And did you restart Firefox after changing the pref?
Comment 80•4 years ago
|
||
(In reply to Harry Twyford [:harry] from comment #79)
Are you on a recent Nightly? And did you restart Firefox after changing the pref?
Not on the Nightly - your note above suggests that is only applicable for < MacOS 11; disabled but for the setting you provided for MacOS 11. Did I read that wrong? Did you mean use the Nightly AND try this setting?
Restarted Firefox (87.0) after enabling. No change.
Assignee | ||
Comment 81•4 years ago
|
||
Sorry that I wasn't clear. The feature is only available on Firefox 89+, which is current Nightly. It's enabled by default for macOS <11 and (currently) disabled for macOS 11. It can be optionally enabled on macOS 11 by setting the pref full-screen-api.macos.shiftToolbar
to true
and restarting Firefox. We're hoping to fix bug 1700211 soon and get it enabled by default on macOS 11 as well.
Assignee | ||
Comment 82•4 years ago
|
||
Depends on D109988
Comment 83•4 years ago
|
||
(In reply to Harry Twyford [:harry] from comment #81)
Sorry that I wasn't clear. The feature is only available on Firefox 89+, which is current Nightly. It's enabled by default for macOS <11 and (currently) disabled for macOS 11. It can be optionally enabled on macOS 11 by setting the pref
full-screen-api.macos.shiftToolbar
totrue
and restarting Firefox. We're hoping to fix bug 1700211 soon and get it enabled by default on macOS 11 as well.
Ah, thanks for the clarification, Harry. Though I've tried Nightly in the past, I'm sticking with regular consumer version at the present. Just one less 'Adventures in Appland' to concern myself with in MacOS.
I guess I'll just hang back and see how long it takes for the fix to make its way down the food chain to the regular rabble. And / or put FF on the backburner and use one that gets along with MacOS 11 until then. 😢
Comment 84•4 years ago
|
||
Comment 85•4 years ago
|
||
bugherder |
Comment 86•4 years ago
|
||
Confirming that toolbar shifting is enabled by default on macOS 11.2.3, 10.15, 10.14, 10.13, and 10.12.
Reporter | ||
Comment 87•4 years ago
|
||
(In reply to barrywcook from comment #78)
Harry -
re: about: config pref setting noted above for MacOS 11 - enabled - no change. Apple menubar eventually freezes if beckoned.
BTW, I was not aware of issue as per bug 1700211.
This is still happening here on current nightly 89.0a1 (2021-04-18) (64-Bit). Is there a separate bug for this?
Comment 88•4 years ago
|
||
Toolbar shifting seems almost entirely unrelated to the bug described in this ticket. The menu bar freezing is an independent bug.
Assignee | ||
Comment 89•4 years ago
|
||
(In reply to beingalink from comment #87)
(In reply to barrywcook from comment #78)
Harry -
re: about: config pref setting noted above for MacOS 11 - enabled - no change. Apple menubar eventually freezes if beckoned.
BTW, I was not aware of issue as per bug 1700211.This is still happening here on current nightly 89.0a1 (2021-04-18) (64-Bit). Is there a separate bug for this?
Yes, the menu bar/title bar freezing is tracked in bug 1687055.
Comment 90•4 years ago
|
||
This is just as bad
Can we just have the option to use tabs on the bottom of the screen where the status bar is? (make it optional of course)
Description
•