Bug 738335 - Enable toolbar shifting for all users. r=mac-reviewers,bradwerth

Depends on D109988

Differential Revision: https://phabricator.services.mozilla.com/D109989